# terminal

./: CMakeLists.txt  Kconfig  README.org  west.yml
app/: CMakeLists.txt
app/boards/shields/ssd1306/: Kconfig.defconfig  Kconfig.shield  ssd1306_adafruit_feather_oled_128x32.overlay
app/src/: main.c
zephyr/: module.yml
